blue-green/preview-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue-green-preview
  labels:
    app: nginx-blue-green-preview
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nginx-blue-green-preview
  type: ClusterIP
