blue-green/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-blue-green
  namespace: blue-green
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx-blue-green.devsecops.com`)
      kind: Rule
      services:
        - name: nginx-blue-green
          port: 80

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-blue-green-preview
  namespace: blue-green
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx-blue-green-preview.devsecops.com`)
      kind: Rule
      services:
        - name: nginx-blue-green-preview
          port: 80
---
